WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
286362
Regression(
289197@main
) Unable to pass relative test paths to WebKitTestRunner
https://bugs.webkit.org/show_bug.cgi?id=286362
Summary
Regression(289197@main) Unable to pass relative test paths to WebKitTestRunner
Chris Dumez
Reported
2025-01-22 08:41:57 PST
Unable to pass relative test paths to WebKitTestRunner since
289197@main
.
Attachments
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2025-01-22 08:49:23 PST
Pull request:
https://github.com/WebKit/WebKit/pull/39385
EWS
Comment 2
2025-01-22 11:48:08 PST
Committed
289252@main
(fc23208c5f84): <
https://commits.webkit.org/289252@main
> Reviewed commits have been landed. Closing PR #39385 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2025-01-22 11:49:17 PST
<
rdar://problem/143413213
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug