Regression(289197@main) Unable to pass relative test paths to WebKitTestRunner https://bugs.webkit.org/show_bug.cgi?id=286362

Reviewed by Darin Adler.

In 289197@main, I switched from using null terminated `const char*` to spans.
However, I got the size of the span wrong in the relative path case because
the allocated memory is larger than the resulting path (we use PATH_MAX).

We now keep track how the actual path length inside the malloc'd buffer and
use this for the span we pass to WKURLCreateWithUTF8String(). I also stop
storing a null terminator in the buffer since it is useless now that we
track the string size.

* Tools/WebKitTestRunner/TestController.cpp:
(WTR::TestController::createTestURL):

Canonical link: https://commits.webkit.org/289252@main